18 August 2021 Petasis George <petasis@iit.demokritos.gr>:
 * clarin-angular/src/app/ng-matero/core/authentication/auth.service.ts:
 * clarin-angular/src/app/ng-matero/core/authentication/interface.ts:
 * clarin-angular/src/app/ng-matero/core/authentication/login.service.ts:
 Updated login methods to match updated ng-matero.

 * clarin-angular/src/styles/*:
 * clarin-angular/src/app/ng-matero/*: Update to latest ng-matero (12.1.1).

17 August 2021 Petasis George <petasis@iit.demokritos.gr>:
 * clarin-angular/src/css/clarin-annschema.scss: Fixed spacing among cells.

 * backend/clarin/database/migrations/2021_08_12_114251_modify_open_documents_primary_keys.php:
 * Backend: Modified primary key in open_documents table, so as to allow
 multiple open documents for each user.

09 August 2021 Petasis George <petasis@iit.demokritos.gr>:
 * clarin-angular/src/app/components/views/annotation/annotation.component.ts:
 Fixes in the way open Documents are handled. Old behaviour was buggy (still
 buggy in the AngularJS front-end).

 * clarin-angular/src/app/services/restore-annotation-service/restore-annotation.service.ts:
 * backend/clarin/app/Http/Controllers/OpenDocumentController.php: Added the
 ability to set db_interactions for all users of the document to 0.

 * clarin-angular/src/app/services/sse-service/sse.service.ts: Fixed missing
 events after re-connect (by firtering events propagated to the observer as
 errors).

 * backend/clarin/app/Http/Controllers/TempAnnotationController.php: Added
 "id"s in SSE messages.

08 August 2021 Petasis George <petasis@iit.demokritos.gr>:
 * backend/clarin/app/Http/Controllers/OpenDocumentController.php: Changes to
 return the user id. If 'db_interactions' is specified in store(), its value
 is set instead of the default calculated one.

 * backend/clarin/app/Http/Controllers/TempAnnotationController.php: Service
 now returns the value of 'cd_interactions'.
