@@ -9,60 +9,61 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "i18n:init": "ngx-translate-extract --input ./src --output ./src/assets/i18n/template.json --key-as-default-value --replace --format json",
-    "i18n:extract": "ngx-translate-extract --input ./src --output ./src/assets/i18n/{en,el}.json --clean --format json"
+    "i18n:extract": "ngx-translate-extract --input ./src --output ./src/assets/i18n/{en,el}.json --clean --format json",
+    "postinstall": "ngcc --properties es5 browser module main --first-only"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^12.1.1",
+    "@angular/animations": "^12.2.1",
     "@angular/cdk": "~12.1.1",
-    "@angular/common": "~12.1.1",
-    "@angular/compiler": "~12.1.1",
-    "@angular/core": "~12.1.1",
+    "@angular/common": "~12.2.1",
+    "@angular/compiler": "~12.2.1",
+    "@angular/core": "~12.2.1",
     "@angular/flex-layout": "^12.0.0-beta.34",
-    "@angular/forms": "~12.1.1",
-    "@angular/localize": "~12.1.1",
+    "@angular/forms": "~12.2.1",
+    "@angular/localize": "~12.2.1",
     "@angular/material": "~12.1.1",
     "@angular/material-moment-adapter": "~12.1.1",
-    "@angular/platform-browser": "~12.1.1",
-    "@angular/platform-browser-dynamic": "~12.1.1",
-    "@angular/router": "~12.1.1",
+    "@angular/platform-browser": "~12.2.1",
+    "@angular/platform-browser-dynamic": "~12.2.1",
+    "@angular/router": "~12.2.1",
     "@flowjs/flow.js": "^2.14.1",
     "@flowjs/ngx-flow": "^0.4.6",
-    "@mat-datetimepicker/core": "^6.0.3",
-    "@mat-datetimepicker/moment": "^6.0.3",
+    "@mat-datetimepicker/core": "^7.0.1",
+    "@mat-datetimepicker/moment": "^7.0.1",
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
-    "@ng-matero/extensions": "^11.3.4",
+    "@ng-matero/extensions": "^12.1.0",
     "@ngx-formly/core": "^5.10.22",
     "@ngx-formly/material": "^5.10.22",
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
     "angular-split": "^5.0.0",
     "backbone": "^1.4.0",
-    "bootstrap": "^4.5.0",
+    "bootstrap": "^5.1.0",
     "bson-objectid": "^2.0.1",
-    "codemirror": "^5.62.0",
+    "codemirror": "^5.62.2",
     "flash-messages": "^0.0.4",
     "flash-messages-angular": "^4.0.1",
-    "jointjs": "^3.3.1",
+    "jointjs": "^3.4.0",
     "jquery": "^3.6.0",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
     "moment": "^2.29.1",
-    "ng-matero": "^11.3.0",
+    "ng-matero": "^12.1.1",
     "ngx-permissions": "^8.1.1",
     "ngx-progressbar": "^6.1.1",
-    "ngx-scrollbar": "^7.5.6",
-    "ngx-toastr": "^13.2.1",
-    "photoviewer": "^3.5.8",
+    "ngx-scrollbar": "^7.6.1",
+    "ngx-toastr": "^14.1.0",
+    "photoviewer": "^3.6.2",
     "rxjs": "~6.5.4",
     "screenfull": "^5.1.0",
-    "tslib": "^2.0.0",
+    "tslib": "^2.3.1",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.1.1",
-    "@angular/cli": "~12.1.1",
-    "@angular/compiler-cli": "~12.1.1",
+    "@angular-devkit/build-angular": "~12.2.1",
+    "@angular/cli": "~12.2.1",
+    "@angular/compiler-cli": "~12.2.1",
     "@biesbjerg/ngx-translate-extract": "^7.0.4",
     "@types/backbone": "^1.4.0",
     "@types/jasmine": "~3.6.0",
